--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,7 +7,7 @@ body {
     background-color: #f8f9fa;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 0 0 0 0;
     overflow-x: hidden; 
 }
 .hero-section {
@@ -20,7 +20,6 @@ body {
     z-index: 1;
 }
 .hero-section::before {
-    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -52,4 +51,7 @@ body {
     width: 100vw; 
     margin-left: calc(50% - 50vw);
     overflow-x: hidden;
+}
+.footer-text{
+    color: rgb(97, 97, 97);
 }
