--- a/css/estilo.css
+++ b/css/estilo.css
@@ -47,6 +47,9 @@ body {
     border-radius: 10px;
     margin-top: 20px;
 }
+main{
+    flex: 1;
+}
 .footer-full-width {
     width: 100vw; 
     margin-left: calc(50% - 50vw);
@@ -54,4 +57,35 @@ body {
 }
 .footer-text{
     color: rgb(97, 97, 97);
+}
+.timeline-card {
+    position: relative;
+    color: white;
+    text-align: center;
+    height: 250px;
+    overflow: hidden;
+}
+.timeline-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(50%);
+    transition: all 0.3s ease;
+}
+.timeline-card:hover img {
+    filter: brightness(30%);
+    transform: scale(1.05);
+}
+.timeline-card .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.timeline-card h3 {
+    font-size: 2rem;
+    font-weight: bold;
+}
+.timeline-card p {
+    font-size: 1rem;
 }
