--- a/css/estilo.css
+++ b/css/estilo.css
@@ -89,3 +89,41 @@ main{
 .timeline-card p {
     font-size: 1rem;
 }
+.player-card {
+    border: none;
+    border-radius: 10px;
+    overflow: hidden;
+    text-align: center;
+    transition: transform 0.2s ease-in-out;
+    position: relative;
+}
+
+.player-card:hover {
+    transform: scale(1.05);
+}
+
+.player-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-color: #222;
+}
+
+.player-name {
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-top: 10px;
+}
+
+.plus-icon {
+    position: absolute;
+    top: 8px;
+    right: 10px;
+    font-size: 1.2rem;
+    color: white;
+    font-weight: bold;
+}
+
+hr {
+    border-color: #666;
+}
