--- a/css/estilo.css
+++ b/css/estilo.css
@@ -127,3 +127,25 @@ main{
 hr {
     border-color: #666;
 }
+.hero-section2 {
+    background: url('../img/elenco.jpg') no-repeat center center;
+    
+    background-size: cover; 
+    min-height: 500px;
+    
+    position: relative;
+    z-index: 1;
+}
+.hero-section2::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: -1; 
+}
+.hero-section2::before .container-fluid {
+    position: relative;
+    z-index: 2; 
+}
