--- a/css/estilo.css
+++ b/css/estilo.css
@@ -171,3 +171,25 @@ hr {
   position: relative;
   z-index: 1;
 }
+.formulario2 {
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.8);
+    overflow: hidden;
+}
+.formulario2::before {
+    height: 400px;
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-image: url('../img/corinthians1.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 500px;
+    filter: brightness(0) invert(1);
+    opacity: 0.5;
+    z-index: 0;
+}
+.formulario2 > * {
+    position: relative;
+    z-index: 1;
+}
